--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
@@ -1,36 +1,48 @@
 <ng-container [formGroup]="form">
   
   <!-- /Exnterl Log fields --> 
-  <case-textarea-control *ngIf="isExternalLogFieldVisible" 
-      [field]="caseFieldsNames.Log_ExternalText" 
-      [form]="form"></case-textarea-control>
+  <div class="bordered">
+    <case-textarea-control *ngIf="isExternalLogFieldVisible" 
+        [field]="caseFieldsNames.Log_ExternalText" 
+        [form]="form"></case-textarea-control>
+  </div>
 
-  <mbsc-switch *ngIf="isExternalLogFieldVisible" [formControlName]="caseFieldsNames.Log_SendMailToNotifier">
-     {{ 'Till' | translate }}:
-    <span class="mbsc-desc">{{ externalLogEmailsTo }}</span>
-  </mbsc-switch>
-
-  <lognote-email-input *ngIf="isExternalLogFieldVisible"
-      [field]="caseFieldsNames.Log_ExternalEmailsCC"
-      [form]="form"></lognote-email-input>  
+  <div class="bordered">
+    <mbsc-switch *ngIf="isExternalLogFieldVisible" [formControlName]="caseFieldsNames.Log_SendMailToNotifier">
+      {{ 'Till' | translate }}:
+      <span class="mbsc-desc">{{ externalLogEmailsTo }}</span>
+    </mbsc-switch>
+  </div>
+  
+  <div class="bordered">
+    <lognote-email-input *ngIf="isExternalLogFieldVisible"
+        [field]="caseFieldsNames.Log_ExternalEmailsCC"
+        [form]="form"></lognote-email-input>  
+  </div>
   <!-- /Exnterl Log fields --> 
 
   <!-- Internal Log fields -->
-  <case-textarea-control *ngIf="isInternalLogFieldVisible"
-      [field]="caseFieldsNames.Log_InternalText" 
-      [form]="form"></case-textarea-control>
+  <div class="bordered">
+    <case-textarea-control *ngIf="isInternalLogFieldVisible"
+        [field]="caseFieldsNames.Log_InternalText" 
+        [form]="form"></case-textarea-control>
+  </div>
 
-  <lognote-email-input *ngIf="isInternalLogFieldVisible"
-      [field]="caseFieldsNames.Log_InternalEmailsTo"
-      [form]="form"></lognote-email-input>
+  <div class="bordered">
+    <lognote-email-input *ngIf="isInternalLogFieldVisible"
+        [field]="caseFieldsNames.Log_InternalEmailsTo"
+        [form]="form"></lognote-email-input>
+  </div>
 
-  <lognote-email-input *ngIf="isInternalLogFieldVisible"
-      [field]="caseFieldsNames.Log_InternalEmailsCC"
-      [form]="form"></lognote-email-input>
+  <div class="bordered">
+    <lognote-email-input *ngIf="isInternalLogFieldVisible"
+        [field]="caseFieldsNames.Log_InternalEmailsCC"
+        [form]="form"></lognote-email-input>
+  </div>
   <!-- /Internal Log fields -->
 
   <ng-container *ngIf="isAttachedFilesVisible">
-    <div id="log-files" *ngIf="files && files.length > 0">
+    <div id="log-files" class="bordered" *ngIf="files && files.length > 0">
         <mbsc-listview [options]="fileListSettings" class="fileListView">
             <mbsc-listview-item *ngFor="let file of files;" icon="fa-paperclip">{{ file }}</mbsc-listview-item>
         </mbsc-listview>
