--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.scss
@@ -1,9 +1,36 @@
 :host {
   display:block;  
   background: none #fff;
+
+  ::ng-deep .bordered {
+    border-bottom:solid 1px #ccc!important;
+    overflow:hidden;
+
+    .mbsc-label-stacked:before,
+    .mbsc-label-stacked:after
+    {  
+      left: 0px!important;
+      border-bottom-width:0px!important;
+      border-top-width:0px!important;
+    }
+  }
+
+
+  ::ng-deep .mbsc-label-stacked:before,
+  ::ng-deep .mbsc-label-stacked:after
+  {  
+    left: 0px!important;
+    //border-bottom-width:0px!important;
+    //border-top-width:0px!important;
+  }
+  
+  .formcontent {
+    background:#fff!important;
+  }
+
 }
 
-.fileListView {   
+.fileListView {
   margin-right: 20px;
   margin-left: 20px;
 }
