--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/search-input-base/search-input-base.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/search-input-base/search-input-base.component.html
@@ -1,8 +1,8 @@
 <ng-container [formGroup]="form">
-<div class="mbsc-grid mbsc-no-padding formcontent bordered">
+<div class="mbsc-grid mbsc-no-padding formcontent">
   <div class="mbsc-row">
     <div class="mbsc-col-10">
-      <mbsc-input id="{{ field }}" #searchInput
+      <mbsc-input id="{{ field }}" #searchInput 
            [ngClass]="{ 'searchInput': true, 'disabled': isFormControlDisabled }"
            [formControlName]="field">{{ formControl.label }}{{ requiredSymbol }}</mbsc-input>
     </div>
