#70683 - External lognote email disabled by setting on Sub Status

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
@@ -8,7 +8,7 @@
   </div>
 
   <div class="bordered">
-    <mbsc-switch *ngIf="isExternalLogFieldVisible" [formControlName]="caseFieldsNames.Log_SendMailToNotifier">
+    <mbsc-switch #sendMailToNotifierControl *ngIf="isExternalLogFieldVisible" [disabled]="isSendMailToNotifierDisabled" [formControlName]="caseFieldsNames.Log_SendMailToNotifier">
       {{ 'Till' | translate }}:
       <span class="mbsc-desc">{{ externalLogEmailsTo }}</span>
     </mbsc-switch>
