#70357 - log notes (internal & external); Multiselect for emails search and style fixes;

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
@@ -7,7 +7,7 @@
         [form]="form"></case-textarea-control>
   </div>
 
-  <div class="bordered">
+  <div class="bordered switch">
     <mbsc-switch #sendMailToNotifierControl *ngIf="isExternalLogFieldVisible" [disabled]="isSendMailToNotifierDisabled" [formControlName]="caseFieldsNames.Log_SendMailToNotifier">
       {{ 'Till' | translate }}:
       <span class="mbsc-desc">{{ externalLogEmailsTo }}</span>
