--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/search-input-base/search-input-base.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/search-input-base/search-input-base.component.scss
@@ -11,4 +11,26 @@
     height:0x!important;
   } 
   
+
+
+  ::ng-deep .mbsc-btn {
+    padding-left:0px!important;
+    padding-right:0px!important;
+  }
+
+  ::ng-deep .searchInput textarea {
+    //height:60px;
+  }
+
+::ng-deep .select-li {
+  font-size:16px!important;
+}
+
+  ::ng-deep .expandBtn {
+    margin:0px!important;
+    padding:3px 0px!important;
+    border-radius: 0 0;
+    background-color: #f2f2f2!important;
+  }
+
 }
