--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
@@ -86,6 +86,9 @@ $disabled-color: #f2f2f2;
     }  
 }
 
+.formcontent {
+  background:#fff!important;
+}
 
 //mobiscroll theme overrides
 .mbsc-mobiscroll {
