#70686 - Report visualization - added more space for case types

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Reports/Views/Report/ReportViewer/_Overview.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Reports/Views/Report/ReportViewer/_Overview.cshtml
@@ -341,7 +341,7 @@
                     <table class="tableform">
                         <tr>
                             <td colspan="2">
-                                <b>@Translation.Get("Historiska värden"):</b>
+                                <b>@Translation.Get("Historiska värden")</b>
                             </td>
                         </tr>
                         <tr class="date-block">
@@ -390,7 +390,7 @@
     </div>
 
     <div id="historicalReportContainer" style="display: none;" class="container">
-        <div class="row" style="display: none; position: relative; height:60vh; width:99vw">
+        <div class="row" style="display: none; position: relative; height:60vh; width:95vw">
             @Html.Partial("ReportViewer/_HistoricalReport", Model.ReportViewerData)
         </div>
     </div>
