--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_Communication.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_Communication.cshtml
@@ -45,7 +45,7 @@
                         <textarea id="logNote" style="width: 450px; height: 100px;"></textarea>
                     </div>
                     <div class="form-group col-md-10">
-                        @if (@* todo: Add check @Model.IsAttachmentsAvailable*@ true)
+                        @if (ViewBag.IsAttachementsAllowed)
                         {
                             <label>@Translation.GetForCase(GlobalEnums.TranslationCaseFields.Filename.ToString(), @SessionFacade.CurrentCustomerID)</label>
                             <div class="form-group">
