--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
@@ -8,7 +8,12 @@
   </div>
 
   <div class="bordered switch">
-    <mbsc-switch #sendMailToNotifierControl *ngIf="isExternalLogFieldVisible" [disabled]="isSendMailToNotifierDisabled" [formControlName]="caseFieldsNames.Log_SendMailToNotifier">
+    <mbsc-switch #sendMailToNotifierControl *ngIf="isExternalLogFieldVisible" 
+                 [disabled]="isSendMailToNotifierDisabled" 
+                 [formControlName]="caseFieldsNames.Log_SendMailToNotifier"
+                 (change)="onSendExternalEmailsCheckChanged($event)"
+                 [options]="switchOptions">
+
       {{ 'Till' | translate }}:
       <span class="mbsc-desc">{{ externalLogEmailsTo }}</span>
     </mbsc-switch>
