#70584 - Log Note emails. Lock and disable behavior fixes.

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
@@ -11,7 +11,7 @@
     <mbsc-switch #sendMailToNotifierControl *ngIf="isExternalLogFieldVisible" 
                  [disabled]="isSendMailToNotifierDisabled" 
                  [formControlName]="caseFieldsNames.Log_SendMailToNotifier"
-                 (change)="onSendExternalEmailsCheckChanged($event)"
+                 (change)="onSendExternalEmailsCheckChanged()"
                  [options]="switchOptions">
 
       {{ 'Till' | translate }}:
