#70687 - Helpdesk UI - translation updated

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Reports/Views/Report/ReportViewer/_Overview.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Reports/Views/Report/ReportViewer/_Overview.cshtml
@@ -183,7 +183,7 @@
                         
                         <tr>
                             <td colspan="2">
-                                <b>@Translation.Get("Verkliga värden")</b>
+                                <b>@Translation.Get("Nuvarande värden")</b>
                             </td>
                         </tr>
 
