--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
@@ -98,14 +98,23 @@ span.disabled {
 //mobiscroll theme overrides
 .mbsc-mobiscroll {
   
+  //override select popup for initiator and notifier search
   &.single-select {
+
+    .mbsc-fr-hdr { padding-top:4px!important;    }
+    .mbsc-input  { margin-bottom:0px!important; }
+    .mbsc-sc-whl-gr {
+      padding-top:0px!important; 
+      padding-bottom:0px!important;
+    }
+  
     .mbsc-sc-itm {
       padding-left: 5px!important;
       //word-break: break-all; 
     }
     .select-li  { font-size:14px!important;  }
-    .itemHeader { font-size: 14px!important; }
-    .itemDesc   { font-size:10px!important;  }
+    .itemHeader { font-size: 14px!important; line-height: 16px!important;}
+    .itemDesc   { font-size:10px!important;  line-height: 14px!important;}
   }
 
   .mbsc-sc-itm {
