#70678 - Information modules ares shown in narrow boxes at Self Service

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Content/css/selfservice.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Content/css/selfservice.css
@@ -1183,3 +1183,7 @@ div .multitext i {
     text-decoration: none;
     outline: 0;
 }
+
+.start-page .panel-body, .start-page .panel-heading {
+    overflow-wrap: break-word;
+}
