--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Start/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Start/Index.cshtml
@@ -8,84 +8,71 @@
     {
         welcomePart = Model.WelcomeHtml.SetHtmlParameters();
     }
+    var isVisibleOperationalLog = SessionFacade.CurrentCustomer.ShowOperationalLogOnExtPage != 0 && Model.OperationLog != null && Model.OperationLog.Any();
+    var isVisibleCalendar = SessionFacade.CurrentCustomer.ShowCalenderOnExtPage != 0 && Model.Calendar != null && Model.Calendar.Any();
+    var isVisibleBulletinBoard = SessionFacade.CurrentCustomer.ShowBulletinBoardOnExtPage != 0 && Model.BulletinBoard != null && Model.BulletinBoard.Any();
+    var mainClassName = (isVisibleOperationalLog || isVisibleCalendar || isVisibleBulletinBoard) ? "col-md-8" : "col-md-12";
 }
 
-<div class="container-fluid dh-container">
+<div class="start-page container-fluid dh-container ">
     <div class="row">
-        <table class="tableform" border="0">
-            <tr>
-                <td align="left" valign="top">
-                    <div class="col-md-12">
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="panel panel-default">
-                                    <div class="panel-body">
-                                        @Html.Raw(welcomePart)
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+        <div class="@mainClassName">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    @Html.Raw(welcomePart)
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            @if (isVisibleOperationalLog)
+            {
+                <div class="panel panel-default">
+                    <div class="panel-heading phselfservice">@Translation.Get("Driftlogg") </div>
+                    <div class="panel-body">
+                        @if (Model.OperationLog != null)
+                        {
+                            foreach (var o in Model.OperationLog)
+                            {
+                                <p> <strong> @Html.DisplayFor(m => o.ChangedDate, "DateAndTime") </strong> <br /> @Html.Raw(o.LogTextExternal) </p>
+                                <br />
+                            }
+                        }
                     </div>
-                </td>
-                <td valign="top">
-                    @if (SessionFacade.CurrentCustomer.ShowOperationalLogOnExtPage != 0 && Model.OperationLog != null && Model.OperationLog.Any())
-                    {
-                        <div class="col-md-8">
-                            <div class="panel panel-default">
-                                <div class="panel-heading phselfservice">@Translation.Get("Driftlogg", Enums.TranslationSource.TextTranslation) </div>
-                                <div class="panel-body">
-                                    @if (Model.OperationLog != null)
-                                    {
-                                        foreach (var o in Model.OperationLog)
-                                        {
-                                            <p> <strong> @Html.DisplayFor(m => o.ChangedDate, "DateAndTime")  </strong> <br /> @Html.Raw(o.LogTextExternal) </p>
-                                            <br />
-                                        }
-                                    }
-                                </div>
-                            </div>
-                        </div>
-                    }
-                    @if (SessionFacade.CurrentCustomer.ShowCalenderOnExtPage != 0 && Model.Calendar != null && Model.Calendar.Any())
-                    {
-                        <div class="col-md-8">
-                            <div class="panel panel-default">
-                                <div class="panel-heading phselfservice">@Translation.Get("Aktuellt", Enums.TranslationSource.TextTranslation) </div>
-                                <div class="panel-body">
-                                    @if (Model.Calendar != null)
-                                    {
-                                        foreach (var c in Model.Calendar)
-                                        {
-                                            <p> <strong> @Html.DisplayFor(m => c.CalendarDate, "Date")  </strong> <br /> @Html.Raw(c.Text) </p>
-                                            <br />
-                                        }
-                                    }
-                                </div>
-                            </div>
-                        </div>
-                    }
-                    @if (SessionFacade.CurrentCustomer.ShowBulletinBoardOnExtPage != 0 && Model.BulletinBoard != null && Model.BulletinBoard.Any())
-                    {
-                        <div class="col-md-8">
-                            <div class="panel panel-default">
-                                <div class="panel-heading phselfservice">@Translation.Get("Bulletin Board", Enums.TranslationSource.TextTranslation) </div>
-                                <div class="panel-body">
-                                    @if (Model.BulletinBoard != null)
-                                    {
-                                        foreach (var b in Model.BulletinBoard)
-                                        {
-                                            <p> <strong> @Html.DisplayFor(m => b.ChangedDate, "DateAndTime")  </strong> <br /> @Html.Raw(b.Text) </p>
-                                            <br />
-                                        }
-                                    }
-                                </div>
-                            </div>
-                        </div>
-                    }
-                    <!--ON GOING--->
-                </td>
-            </tr>
-        </table>
+                </div>
+            }
+            @if (isVisibleCalendar)
+            {
+                <div class="panel panel-default">
+                    <div class="panel-heading phselfservice">@Translation.Get("Aktuellt") </div>
+                    <div class="panel-body">
+                        @if (Model.Calendar != null)
+                        {
+                            foreach (var c in Model.Calendar)
+                            {
+                                <p> <strong> @Html.DisplayFor(m => c.CalendarDate, "Date") </strong> <br /> @Html.Raw(c.Text) </p>
+                                <br />
+                            }
+                        }
+                    </div>
+                </div>
+            }
+            @if (isVisibleBulletinBoard)
+            {
+                <div class="panel panel-default">
+                    <div class="panel-heading phselfservice">@Translation.Get("Bulletin Board") </div>
+                    <div class="panel-body">
+                        @if (Model.BulletinBoard != null)
+                        {
+                            foreach (var b in Model.BulletinBoard)
+                            {
+                                <p> <strong> @Html.DisplayFor(m => b.ChangedDate, "DateAndTime") </strong> <br /> @Html.Raw(b.Text) </p>
+                                <br />
+                            }
+                        }
+                    </div>
+                </div>
+            }
+        </div>
     </div>
 
 </div>
